--- a/modules/characters/client/views/creationSteps/creation-attributes.view.html
+++ b/modules/characters/client/views/creationSteps/creation-attributes.view.html
@@ -1,7 +1,7 @@
 <div class="form-group">
-  <div ng-include="'modules/characters/client/views/creationSteps/character.creation.attributes.subview.html'"></div>
+  <div ng-include="'modules/characters/client/views/creationSteps/creation-attributes.subview.html'"></div>
     <div class="row text-center">
       <p>You have <b>{{vm.points}}</b> points available.</p>
     </div>
 </div>
-<div ng-include="'modules/characters/client/views/creationSteps/character.creation.skills.subview.html'"></div>
+<skills-display can-select="true" character="vm.character"></skills-display>
