Added Specification to Character sheet

--- a/modules/characters/client/views/character-sheet/background.subview.html
+++ b/modules/characters/client/views/character-sheet/background.subview.html
@@ -1,3 +1,9 @@
+<div class="row" ng-if="vm.character.background.generalization.specification">
+  <div class="col-md-12">
+    <label ng-bind="vm.character.background.generalization.specification"></label>
+    <p ng-bind="vm.character.background.specification"></p>
+  </div>
+</div>
 <div class="row">
   <div class="col-md-12">
     <label>Trait</label>
