--- a/modules/characters/client/views/view-character.client.view.html
+++ b/modules/characters/client/views/view-character.client.view.html
@@ -30,6 +30,9 @@
     </div>
     <hr>
     <div class="row">
+      <div class="col-md-10" ng-include="'modules/characters/client/views/character-sheet/class-traits.subview.html'"></div>
+    </div>
+    <div class="row">
       <player-inventory
         class="col-md-10"
         can-equip="{{vm.authentication.user._id === vm.character.player._id}}"
