--- a/modules/items/client/views/form-item.client.view.html
+++ b/modules/items/client/views/form-item.client.view.html
@@ -36,6 +36,7 @@
                     <option value="Very Rare">Very Rare</option>
                     <option value="Legendary">Legendary</option>
                     <option value="Artifact">Artifact</option>
+                    <option value="Unique">Unique</option>
                 </select>
             </div>
           </div>
