--- a/modules/wikis/client/views/form-wiki.client.view.html
+++ b/modules/wikis/client/views/form-wiki.client.view.html
@@ -13,7 +13,16 @@
           </div>
         </div>
 
-        <text-angular></text-angular>
+        <div ng-repeat="section in vm.wiki.sections">
+          <label class="control-label">Section Title</label>
+          <input type="text" ng-model="vm.wiki.sections[$index].title" class="form-control"></input>
+          <label class="control-label">Section Text</label>
+          <textarea ng-model="vm.wiki.sections[$index].content" class="form-control" rows="5"></textarea>
+          <br>
+        </div>
+        <div>
+          <button ng-click="vm.wiki.sections.push({})" class="btn btn-default pull-right" type="button">New Section</button>
+        </div>
 
         <div class="form-group">
           <button type="submit" class="btn btn-default">{{vm.wiki._id ? 'Update' : 'Create'}}</button>
