--- a/modules/episodes/client/views/view-episode.contracts.client.view.html
+++ b/modules/episodes/client/views/view-episode.contracts.client.view.html
@@ -7,23 +7,15 @@
 
 <div ng-show="vm.episode.contracts.length > 0">
   <div ng-repeat="contract in vm.episode.contracts"
-        class="well xs-well"
         ng-class="vm.getPlayerVotedContract()._id === contract._id ? 'voted-contract' : 'regular-contract'"
         ng-click="vm.voteFor($index)">
 
-    <div class="row"><h4 class="col-md-12" ng-bind="contract.name"></h4></div>
-    <div class="row"><p class="col-md-12"><b>Client:</b>  {{contract.client}}</p></div>
-    <p><i ng-bind="contract.details"></i></p>
-    <div class="row"><b>
-      <div class="col-sm-2 col-xs-5">Reward</div>
-      <div class="col-sm-10 col-xs-7">Condition</div></b>
-    </div>
-    <div ng-repeat="reward in contract.rewards" class="row">
-      <div class="col-sm-2 col-xs-5">{{reward.amount}} {{reward.unit}}</div>
-      <div class="col-sm-10 col-xs-7" ng-bind="reward.condition"></div>
-    </div>
-    <br>
-    There are a total of <b>{{contract.voters.length}} votes</b> for this contract.
+    <contract-display
+      player="{{vm.authentication.user._id}}"
+      character="{{vm.chosenCharacter._id}}"
+      episode="vm.episode"
+      contract="contract">
+    </contract-display>
   </div>
 </div>
 <div ng-show="!vm.episode.contracts || vm.episode.contracts.length == 0">
