--- a/modules/characters/client/views/directives/level-up-button.view.html
+++ b/modules/characters/client/views/directives/level-up-button.view.html
@@ -1,4 +1,5 @@
 <a class="btn btn-success"
+  ng-if="vm.hasLevelUp()"
   popover="Level Up Available"
   popover-trigger="mouseenter"
   data-ui-sref="characters.levelup({ characterId: vm.characterId })">
