--- a/modules/episodes/client/views/view-episode.client.view.html
+++ b/modules/episodes/client/views/view-episode.client.view.html
@@ -15,7 +15,7 @@
     <div class="row" >
       <div class="col-md-12">
         <h3>Summary</h3>
-        <p ng-bind="vm.episode.summary"></p>
+        <p class="line-breaker" ng-bind="vm.episode.summary"></p>
       </div>
     </div>
     <hr>
