--- a/modules/items/client/views/view-item.client.view.html
+++ b/modules/items/client/views/view-item.client.view.html
@@ -22,5 +22,5 @@
       <span data-ng-if="!vm.item.user">Deleted User</span>
     </em>
   </small>
-  <p class="lead" data-ng-bind="vm.item.content"></p>
+  <p class="line-breaker lead" data-ng-bind="vm.item.content"></p>
 </section>
