--- a/modules/wikis/client/views/view-wiki.client.view.html
+++ b/modules/wikis/client/views/view-wiki.client.view.html
@@ -14,6 +14,6 @@
   </div>
   <div ng-repeat="section in vm.wiki.sections">
     <h3 ng-bind="section.title"></h3>
-    <p ng-bind="section.content"></p>
+    <p class="line-breaker" ng-bind="section.content"></p>
   </div>
 </section>
