--- a/modules/articles/client/views/view-article.client.view.html
+++ b/modules/articles/client/views/view-article.client.view.html
@@ -16,5 +16,5 @@
       <i class="glyphicon glyphicon-trash"></i>
     </a>
   </div>
-  <p ng-bind="article.content"></p>
+  <p class="line-breaker" ng-bind="article.content"></p>
 </section>
