--- a/modules/items/client/views/directives/shop-list.view.html
+++ b/modules/items/client/views/directives/shop-list.view.html
@@ -38,7 +38,7 @@
     <div class="col-xs-1 glyphicon glyphicon-info-sign" style="margin-top: 12px"></div>
     <div class="col-xs-11">
       <h5><b>{{vm.infoItem.name}}</b></h5>
-      {{vm.infoItem.description}}
+      <span class="line-breaker">{{vm.infoItem.description}}</span>
     </div>
   </div>
 </div>
