Paginated Character Sheet

--- a/modules/characters/client/views/character-sheet/background.subview.html
+++ b/modules/characters/client/views/character-sheet/background.subview.html
@@ -1,3 +1,15 @@
+<div class="row">
+  <div class="col-md-12">
+    <label>Background</label>
+    <p class="line-breaker" ng-bind="vm.character.background.backstory"><p>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-12">
+    <label>Appearance</label>
+    <p class="line-breaker" ng-bind="vm.character.background.appearance"><p>
+  </div>
+</div>
 <div class="row" ng-if="vm.character.background.generalization.specification">
   <div class="col-md-12">
     <label ng-bind="vm.character.background.generalization.specification"></label>
