--- a/modules/characters/client/views/view-character.client.view.html
+++ b/modules/characters/client/views/view-character.client.view.html
@@ -4,27 +4,41 @@
     <img alt="Portrait" class="img-responsive" src="modules/core/client/img/classportraits/wizard.jpg" />
   </div>
 
-  <div class="right-panel">
+  <div class="right-panel" ng-init="selection=0">
     <div class="page-header col-xs-12 col-lg-10">
       <div class="pull-right">
-        <div ng-if="vm.character.player._id === vm.authentication.user._id || vm.authentication.user.roles.indexOf('admin') > -1">
-          <level-up-button
-              level="{{vm.character.level}}"
-              character="{{vm.character._id}}"
-              professions="{{vm.character.playableClass}}">
-          </level-up-button>
-          <a class="btn btn-primary"
-             data-ui-sref="characters.edit({ characterId: vm.character._id })">
-            <i class="glyphicon glyphicon-edit"></i>
-          </a>
-          <a class="btn btn-danger" data-ng-click="vm.remove()">
-            <i class="glyphicon glyphicon-trash"></i>
-          </a>
+
+        <!-- User Specific Buttons-->
+        <div class="row" ng-if="vm.character.player._id === vm.authentication.user._id || vm.authentication.user.roles.indexOf('admin') > -1">
+          <div class="pull-right" style="margin-bottom:4px;">
+            <level-up-button
+                level="{{vm.character.level}}"
+                character="{{vm.character._id}}"
+                professions="{{vm.character.playableClass}}">
+            </level-up-button>
+            <a class="btn btn-primary"
+               data-ui-sref="characters.edit({ characterId: vm.character._id })">
+              <i class="glyphicon glyphicon-edit"></i>
+            </a>
+            <a ng-if="vm.authentication.user.roles.indexOf('admin') > -1" class="btn btn-danger" data-ng-click="vm.remove()">
+              <i class="glyphicon glyphicon-trash"></i>
+            </a>
+          </div>
         </div>
-        <div ng-if="vm.character.player._id !== vm.authentication.user._id && vm.authentication.user.roles.indexOf('admin') === -1">
+
+        <!-- Non-User Info -->
+        <div class="row" ng-if="vm.character.player._id !== vm.authentication.user._id && vm.authentication.user.roles.indexOf('admin') === -1">
           <h3>{{vm.character.player.firstName}} {{vm.character.player.lastName}}</h3>
         </div>
+        <div class="row">
+          <button type="button" class="btn btn-default" ng-click="selection = 0" ng-disabled="selection === 0">Scores </button>
+          <button type="button" class="btn btn-default" ng-click="selection = 1" ng-disabled="selection === 1">Abilities </button>
+          <button type="button" class="btn btn-default" ng-click="selection = 2" ng-disabled="selection === 2">Inventory </button>
+          <button type="button" class="btn btn-default" ng-click="selection = 3" ng-disabled="selection === 3">Background </button>
+        </div>
       </div>
+
+      <!-- Character Name -->
       <h1 data-ng-bind="vm.character.name"></h1>
     </div>
 
@@ -32,23 +46,22 @@
       <div class="col-lg-10 col-xs-12" ng-include="'modules/characters/client/views/character-sheet/main.subview.html'"></div>
     </div>
     <hr>
+
     <div class="row">
-      <div class="col-lg-10 col-xs-12" ng-include="'modules/characters/client/views/character-sheet/skills.subview.html'"></div>
-    </div>
-    <hr>
-    <div class="row">
-      <div class="col-lg-10 col-xs-12" ng-include="'modules/characters/client/views/character-sheet/class-traits.subview.html'"></div>
-    </div>
-    <div class="row">
-      <player-inventory
-        class="col-lg-10 col-xs-12"
-        can-equip="{{vm.authentication.user._id === vm.character.player._id}}"
-        character="vm.character">
-      </player-inventory>
-    </div>
-    <hr>
-    <div class="row">
-      <div class="col-lg-10 col-xs-12" ng-include="'modules/characters/client/views/character-sheet/background.subview.html'"></div>
+      <div class="col-lg-10 col-xs-12" ng-if="selection === 0" ng-include="'modules/characters/client/views/character-sheet/skills.subview.html'"></div>
+
+      <div class="col-lg-10 col-xs-12" ng-if="selection === 1" ng-include="'modules/characters/client/views/character-sheet/class-traits.subview.html'"></div>
+
+      <div class="col-lg-10 col-xs-12" ng-if="selection === 2">
+        <player-inventory
+          can-equip="{{vm.authentication.user._id === vm.character.player._id}}"
+          character="vm.character">
+        </player-inventory>
+      </div>
+
+      <div class="col-lg-10 col-xs-12" ng-if="selection === 3">
+        <div ng-include="'modules/characters/client/views/character-sheet/background.subview.html'"></div>
+      </div>
     </div>
   </div>
 
