Made changes suggested by Evan for removing the switch statement

--- a/modules/items/client/css/rarity.css
+++ b/modules/items/client/css/rarity.css
@@ -1,9 +1,9 @@
-.rarity-commmon{
+.rarity-common{
   font-size: 16px;
   color: white;
 }
 
-.rarity-uncommmon{
+.rarity-uncommon{
   font-size: 16px;
   color: #00cc00;
 }
