--- a/modules/messages/client/views/message-container.html
+++ b/modules/messages/client/views/message-container.html
@@ -1,11 +1,11 @@
 <section>
   <div ng-if="vm.messages">
-    <div ng-repeat="msg in vm.messages | limitTo: display |orderBy:'created':reverse">
+    <div ng-repeat="msg in vm.messages | limitTo: display | orderBy:'$index':reverse">
       <message-view message="{{msg}}"></message-view>
       <br>
     </div>
   </div>
   <div>
-    <message-entry user="{{vm.user}}" context="{{context}}"></message-entry>
+    <message-entry user="{{vm.user}}" socket="vm.promiseSocket" context="{{context}}"></message-entry>
   </div>
 </section>
