Added Notification to Header

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -81,3 +81,11 @@ body {
 .line-breaker {
   white-space: pre-wrap;
 }
+
+.has-notifications>* {
+  color: #f71;
+}
+
+.has-notifications:hover>* {
+  color: #fa1;
+}
