--- a/modules/episodes/client/views/directives/contract-display.subview.html
+++ b/modules/episodes/client/views/directives/contract-display.subview.html
@@ -1,6 +1,6 @@
-<div class="col-xs-12 well">
+<div class="col-xs-12" style="border: solid 0.3px; border-radius: 8px; margin-bottom: 4px;">
   <!-- Contract Name and voter -->
-  <h4>
+  <h4 style="border-bottom: solid 1px; padding-bottom: 4px;">
     <span ng-if="vm.canVote()" tooltip="Vote for Contract: {{contract.name}}">
       <!-- Enabled Contract -->
       <span ng-if="vm.playerVoted()"
@@ -12,8 +12,7 @@
             class="glyphicon glyphicon-unchecked can-select"
             ng-click="vm.castVote()">
       </span>
-    </span>
-    {{vm.contract.name}}
+    </span> {{vm.contract.name}}
   </h4>
 
   <!-- Information -->
@@ -30,7 +29,8 @@
     <div class="col-sm-10 col-xs-7" ng-bind="reward.condition"></div>
   </div>
   <br>
-  <p>Expected playstyles: <b ng-repeat="style in vm.contract.expectedPlayStyles"> "{{style}}"  </b></p>
+  <p>Expected playstyles: <span ng-repeat="style in vm.contract.expectedPlayStyles"><span ng-if="$index > 0 && vm.contract.expectedPlayStyles.length > 2 && $index < vm.contract.expectedPlayStyles.length">, </span><span ng-if="$index === vm.contract.expectedPlayStyles.length-1"> and </span> {{style}}</span>
+  </p>
+  There <span ng-if="vm.numVoters() === 1">is</span><span ng-if="vm.numVoters() !== 1">are</span> a total of <b>{{vm.numVoters()}} votes</b> for this contract.
   <br>
-  There are a total of <b>{{vm.numVoters()}} votes</b> for this contract.
 </div>
